site now looks correct on firefox and chromium

--- a/src/components/Game.module.css
+++ b/src/components/Game.module.css
@@ -61,5 +61,5 @@ input[type="number"] {
     flex-grow: 1;
     flex-direction: column;
     justify-content: center;
-    gap: 0.5rem;
+    gap: 1rem;
 }
